# GPSMetaChecker

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TinyEXIF.h  main.cpp  mainwindow.ui
includes/: TinyEXIF.cpp
